feat:aggiungi-libro-header

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                             Catalogo Libri
 
                         </h3>
-                        <span class="badge text-bg-primary p-3">Aggiungi Libro</span>
+                        <a href="./aggiungi-libro.html"><span class="badge text-bg-primary p-3">Aggiungi Libro</span></a>
                     </div>
 
                     <table class="table table-striped">
